# dottable_dict

./: LICENSE  README.md  pyproject.toml
src/dottable_dict/: __init__.py  dottable_dict.py
