[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dottable_dict"
version = "0.0.2"
authors = [{ name = "Yuval Dotan", email = "ydotan.tech@gmail.com" }]
description = "TBA"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yuvdo/dottable_dict"
Issues = "https://github.com/yuvdo/dottable_dict/issues"
